--- a/apk/res/values-as/strings.xml
+++ b/apk/res/values-as/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"কোনো শেহতীয়া এক্সেছ নাই"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"শেহতীয়াকৈ আপোনাৰ ডেটা এক্সেছ কৰা এপ্‌সমূহ ইয়াত স্বয়ংক্ৰিয়ভাৱে দেখুওৱা হ’ব"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"আটাইবোৰ চাওক"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"শেহতীয়া এক্সেছ ল’ড কৰিব পৰা নগ’ল"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"কাৰ্যকলাপ"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"কাৰ্যকলাপ"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"শৰীৰৰ জোখ-মাখ"</string>
