--- a/apk/res/values-be/strings.xml
+++ b/apk/res/values-be/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Праграмы не звярталіся да вашых даных у апошні час"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Тут будуць аўтаматычна паказвацца праграмы, якія нядаўна атрымлівалі доступ да вашых даных"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Праглядзець усе"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"Не ўдалося загрузіць нядаўні доступ"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Актыўнасць"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"актыўнасць"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Параметры цела"</string>
