--- a/apk/res/values-az/strings.xml
+++ b/apk/res/values-az/strings.xml
@@ -56,14 +56,10 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"İcazələri idarə edin"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"Saat: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
-    <!-- no translation found for recent_access_empty_state_title (4767157641389217682) -->
-    <skip />
-    <!-- no translation found for recent_access_empty_state_description (6334951450158128989) -->
-    <skip />
-    <!-- no translation found for recent_access_view_all_button (825946958049641541) -->
-    <skip />
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Son giriş yoxdur"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Yaxın zamanlarda datanıza daxil olmuş tətbiqlər avtomatik olaraq burada görünəcək"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"Hamısına baxın"</string>
+    <string name="recent_access_error" msgid="2258399573560888960">"Son girişi yükləmək alınmadı"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Fəaliyyət"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"fəaliyyət"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Bədən ölçüləri"</string>
