--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Δεν υπάρχει πρόσφατη πρόσβαση"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Οι εφαρμογές που έχουν αποκτήσει πρόσφατα πρόσβαση στα δεδομένα σας θα εμφανίζονται αυτόματα εδώ"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Προβολή όλων"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"Δεν ήταν δυνατή η φόρτωση της πρόσφατης πρόσβασης"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Δραστηριότητα"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"δραστηριότητα"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Μετρήσεις σώματος"</string>
