--- a/apk/res/values-et/strings.xml
+++ b/apk/res/values-et/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Hiljutine juurdepääs puudub"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Siin kuvatakse automaatselt rakendused, mis on hiljuti teie andmetele juurde pääsenud"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Kuva kõik"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"Hiljutist juurdepääsu ei saanud laadida"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Tegevus"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"tegevus"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Keha mõõtmisandmed"</string>
