--- a/apk/res/values-it/strings.xml
+++ b/apk/res/values-it/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Nessun accesso recente"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Le app che hanno acceduto di recente ai tuoi dati verranno mostrate automaticamente qui"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Visualizza tutto"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"Impossibile caricare l\'accesso recente"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Attività"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"attività"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Misurazioni corporee"</string>
