--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -25,7 +25,7 @@
     <string name="browse_medical_data" msgid="6963802956096683273">"עיון בסיכום המצב הבריאותי"</string>
     <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"צפייה בסיכומים של המצב הבריאותי שלך והצגת האפליקציות שיכולות לגשת אליהם"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"כל הקטגוריות"</string>
-    <string name="see_all_categories" msgid="5599882403901010434">"הצגת כל הקטגוריות"</string>
+    <string name="see_all_categories" msgid="5599882403901010434">"לכל הקטגוריות"</string>
     <string name="no_data" msgid="1906986019249068659">"אין נתונים"</string>
     <string name="connected_apps_title" msgid="279942692804743223">"הרשאות שניתנות לאפליקציות"</string>
     <string name="connected_apps_subtitle" msgid="8464462995533399175">"ניהול האפליקציות וההרשאות"</string>
@@ -56,14 +56,10 @@
     <string name="separator" msgid="5521285473288943819">", "</string>
     <string name="manage_permissions" msgid="8394221950712608160">"ניהול ההרשאות"</string>
     <string name="recent_access_time_content_descritption" msgid="1137471676075811472">"זמן: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
-    <!-- no translation found for recent_access_empty_state_title (4767157641389217682) -->
-    <skip />
-    <!-- no translation found for recent_access_empty_state_description (6334951450158128989) -->
-    <skip />
-    <!-- no translation found for recent_access_view_all_button (825946958049641541) -->
-    <skip />
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_empty_state_title" msgid="4767157641389217682">"לא הייתה גישה לאחרונה"</string>
+    <string name="recent_access_empty_state_description" msgid="6334951450158128989">"אפליקציות שקיבלו גישה לנתונים שלך לאחרונה יופיעו כאן באופן אוטומטי"</string>
+    <string name="recent_access_view_all_button" msgid="825946958049641541">"צפייה בכל הפרטים"</string>
+    <string name="recent_access_error" msgid="2258399573560888960">"לא ניתן לטעון את הנתונים מהגישה האחרונה"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"פעילות"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"פעילות"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"מדדים גופניים"</string>
@@ -982,7 +978,7 @@
     <string name="things_to_try" msgid="8200374691546152703">"פעולות שכדאי לנסות"</string>
     <string name="check_for_updates" msgid="3841090978657783101">"חיפוש עדכונים"</string>
     <string name="check_for_updates_description" msgid="1347667778199095160">"כדאי לוודא שהאפליקציות המותקנות מעודכנות"</string>
-    <string name="see_all_compatible_apps" msgid="6791146164535475726">"הצגת כל האפליקציות התואמות"</string>
+    <string name="see_all_compatible_apps" msgid="6791146164535475726">"צפייה בכל האפליקציות התואמות"</string>
     <string name="see_all_compatible_apps_description" msgid="2092325337403254491">"חיפוש אפליקציות ב-Google Play"</string>
     <string name="send_feedback" msgid="7756927746070096780">"שליחת משוב"</string>
     <string name="send_feedback_description" msgid="2887207112856240778">"נשמח לשמוע ממך על אפליקציות כושר ובריאות שהיית רוצה שיעבדו עם Health Connect"</string>
