--- a/apk/res/values-ka/strings.xml
+++ b/apk/res/values-ka/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"ბოლოდროინდელი წვდომა არ არის"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"აპები, რომლებსაც ახლახან ჰქონდათ წვდომა თქვენს მონაცემებზე, ავტომატურად გამოჩნდება აქ"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"ყველას ნახვა"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"ბოლო წვდომის ჩატვირთვა ვერ მოხერხდა"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"აქტივობა"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"აქტივობა"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"სხეულის ზომები"</string>
