--- a/apk/res/values-kn/strings.xml
+++ b/apk/res/values-kn/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"ಯಾವುದೇ ಆ್ಯಪ್‌ ಇತ್ತೀಚಿಗೆ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಿಲ್ಲ"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಇತ್ತೀಚೆಗೆ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಿದ ಆ್ಯಪ್‌ಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಇಲ್ಲಿ ತೋರಿಸುತ್ತವೆ"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"ಎಲ್ಲವನ್ನೂ ವೀಕ್ಷಿಸಿ"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"ಇತ್ತೀಚಿನ ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"ಚಟುವಟಿಕೆ"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"ಚಟುವಟಿಕೆ"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"ದೇಹದ ಅಳತೆಗಳು"</string>
