--- a/apk/res/values-lo/strings.xml
+++ b/apk/res/values-lo/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"ບໍ່ມີການເຂົ້າເຖິງຫຼ້າສຸດ"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"ແອັບທີ່ມີສິດເຂົ້າເຖິງຂໍ້ມູນຂອງທ່ານເມື່ອບໍ່ດົນມານີ້ຈະສະແດງຢູ່ບ່ອນນີ້ໂດຍອັດຕະໂນມັດ"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"ເບິ່ງທັງໝົດ"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"ບໍ່ສາມາດໂຫຼດສິດເຂົ້າເຖິງຫຼ້າສຸດ"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"ກິດຈະກຳ"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"ກິດຈະກຳ"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"ການວັດແທກຮ່າງກາຍ"</string>
