--- a/apk/res/values-lt/strings.xml
+++ b/apk/res/values-lt/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Nėra naujausios prieigos"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Čia bus automatiškai rodomos programos, kurios neseniai pasiekė jūsų duomenis"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Žr. viską"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"Nepavyko įkelti naujausios prieigos"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Veikla"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"veikla"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Kūno matavimai"</string>
