--- a/apk/res/values-ms/strings.xml
+++ b/apk/res/values-ms/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Tiada akses terbaharu"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Apl yang telah mengakses data anda baru-baru ini akan dipaparkan di sini secara automatik"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Lihat semua"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"Tidak dapat memuatkan akses terbaharu"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Aktiviti"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"aktiviti"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Ukuran badan"</string>
