--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Sem acesso recente"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"As apps que acederam aos seus dados recentemente são apresentadas automaticamente aqui"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Ver tudo"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"Não foi possível carregar o acesso recente"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Atividade"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"atividade"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Medições corporais"</string>
