--- a/apk/res/values-pt/strings.xml
+++ b/apk/res/values-pt/strings.xml
@@ -22,7 +22,7 @@
     <string name="permissions_and_data_header" msgid="4406105506837487805">"Permissões e dados"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"Gerencie os dados de saúde e condicionamento físico no seu dispositivo e controle quais apps podem ter acesso a eles"</string>
     <string name="data_title" msgid="4456619761533380816">"Dados e acesso"</string>
-    <string name="browse_medical_data" msgid="6963802956096683273">"Consultar histórico de saúde"</string>
+    <string name="browse_medical_data" msgid="6963802956096683273">"Buscar nos históricos de saúde"</string>
     <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Veja seus históricos de saúde e quais apps podem acessá-los"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Todas as categorias"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Acessar todas as categorias"</string>
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"Nenhum acesso recente"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"Os apps que acessaram seus dados recentemente vão aparecer aqui de forma automática"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"Ver tudo"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"Não foi possível carregar o acesso recente"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"Atividade"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"atividade"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"Medidas corporais"</string>
@@ -317,7 +316,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura da pele"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Ler temperatura da pele"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Gravar temperatura da pele"</string>
-    <string name="browse_health_records_intro" msgid="1611488691642390523">"Isso inclui todo o histórico de saúde sincronizado e adicionado ao app Conexão Saúde. Talvez esse não seja seu histórico médico completo, e ele não inclui uma descrição médica do seu histórico de saúde."</string>
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Isso inclui todos os históricos de saúde sincronizados e adicionados ao app Conexão Saúde. Talvez esse não seja seu histórico médico completo, e ele não inclui uma descrição médica dos seus históricos de saúde."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Todos os históricos de saúde"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"todos os históricos de saúde"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Gravar todos os históricos de saúde"</string>
@@ -349,8 +348,8 @@
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"procedimentos"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"Ler dados de procedimentos"</string>
     <string name="social_history_uppercase_label" msgid="4119611299449533999">"História social"</string>
-    <string name="social_history_lowercase_label" msgid="9027541979445736412">"histórico de redes sociais"</string>
-    <string name="social_history_content_description" msgid="7187059309389849831">"Ler histórico de redes sociais"</string>
+    <string name="social_history_lowercase_label" msgid="9027541979445736412">"história social"</string>
+    <string name="social_history_content_description" msgid="7187059309389849831">"Ler história social"</string>
     <string name="visits_uppercase_label" msgid="8532619758336375886">"Consultas"</string>
     <string name="visits_lowercase_label" msgid="2545887061364564151">"visitas"</string>
     <string name="visits_content_description" msgid="6336796415049565697">"Ler visitas"</string>
