--- a/apk/res/values-te/strings.xml
+++ b/apk/res/values-te/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"ఇటీవలి యాక్సెస్ లేదు"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"మీ డేటాను ఇటీవల యాక్సెస్ చేసిన యాప్‌లు ఇక్కడ ఆటోమేటిక్‌గా కనిపిస్తాయి"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"అన్నింటినీ చూడండి"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"ఇటీవలి యాక్సెస్‌ను లోడ్ చేయడం సాధ్యపడలేదు"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"యాక్టివిటీ"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"యాక్టివిటీ"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"శరీర కొలతలు"</string>
