--- a/apk/res/values-th/strings.xml
+++ b/apk/res/values-th/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"ไม่มีการเข้าถึงล่าสุด"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"แอปที่เข้าถึงข้อมูลของคุณเมื่อเร็วๆ นี้จะแสดงที่นี่โดยอัตโนมัติ"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"ดูทั้งหมด"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"โหลดการเข้าถึงล่าสุดไม่ได้"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"กิจกรรม"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"กิจกรรม"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"การตรวจวัดร่างกาย"</string>
