--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"کوئی حالیہ رسائی نہیں ہے"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"جن ایپس نے حال ہی میں آپ کے ڈیٹا تک رسائی حاصل کی ہے وہ خودکار طور پر یہاں دکھائی دیں گی"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"سبھی دیکھیں"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"حالیہ رسائی کو لوڈ نہیں کیا جا سکا"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"سرگرمی"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"سرگرمی"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"جسمانی پیمائشوں سے متعلق ڈیٹا"</string>
