--- a/apk/res/values-gu/strings.xml
+++ b/apk/res/values-gu/strings.xml
@@ -68,7 +68,7 @@
     <string name="sleep_category_lowercase" msgid="842609634386839011">"ઊંઘ"</string>
     <string name="vitals_category_uppercase" msgid="8982333138032938623">"આરોગ્ય વિશેની મહત્ત્વની માહિતી"</string>
     <string name="vitals_category_lowercase" msgid="4664457787866407963">"આરોગ્ય વિશેની મહત્ત્વની માહિતી"</string>
-    <string name="cycle_tracking_category_uppercase" msgid="4723200714782660489">"સાયકલ ટ્રૅક કરવાની સુવિધા"</string>
+    <string name="cycle_tracking_category_uppercase" msgid="4723200714782660489">"સાઇકલ ટ્રૅક કરવાની સુવિધા"</string>
     <string name="cycle_tracking_category_lowercase" msgid="5245446435975317209">"સાયકલ ટ્રૅક કરવાની સુવિધા"</string>
     <string name="nutrition_category_uppercase" msgid="6665096097987741036">"પોષણ"</string>
     <string name="nutrition_category_lowercase" msgid="7804134941649488990">"પોષણ"</string>
