--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -749,7 +749,7 @@
     <string name="volleyball" msgid="7469885673961163729">"Voleibol"</string>
     <string name="walking" msgid="4782496160454621769">"Caminhar"</string>
     <string name="water_polo" msgid="2527119748097860708">"Polo aquático"</string>
-    <string name="weightlifting" msgid="7586735291662318085">"Halterofilismo"</string>
+    <string name="weightlifting" msgid="7586735291662318085">"Musculação"</string>
     <string name="wheelchair" msgid="2226734836271500057">"Cadeira de rodas"</string>
     <string name="workout" msgid="8583398837804461839">"Treino"</string>
     <string name="yoga" msgid="138675430777247097">"Ioga"</string>
