--- a/apk/res/values-ar/strings.xml
+++ b/apk/res/values-ar/strings.xml
@@ -59,8 +59,7 @@
     <string name="recent_access_empty_state_title" msgid="4767157641389217682">"ما من تطبيقات وصلت مؤخرًا إلى بياناتك"</string>
     <string name="recent_access_empty_state_description" msgid="6334951450158128989">"ستظهر هنا تلقائيًا التطبيقات التي وصلت مؤخرًا إلى بياناتك"</string>
     <string name="recent_access_view_all_button" msgid="825946958049641541">"عرض الكل"</string>
-    <!-- no translation found for recent_access_error (2258399573560888960) -->
-    <skip />
+    <string name="recent_access_error" msgid="2258399573560888960">"تعذّر تحميل معلومات الوصول الأخير"</string>
     <string name="activity_category_uppercase" msgid="136628843341377088">"النشاط"</string>
     <string name="activity_category_lowercase" msgid="3007220578865400601">"النشاط"</string>
     <string name="body_measurements_category_uppercase" msgid="422923782603313038">"قياسات الجسم"</string>
