--- a/apk/res/values-bg-watch/strings.xml
+++ b/apk/res/values-bg-watch/strings.xml
@@ -29,5 +29,5 @@
     <string name="grant_dialog_button_allow_always" msgid="5216642447029937725">"През цялото време"</string>
     <string name="grant_dialog_button_allow_foreground" msgid="2911675370133933600">"При използване на прилож."</string>
     <string name="grant_dialog_button_allow_background" msgid="7827419162341440169">"През цялото време"</string>
-    <string name="permgrouplab_health" msgid="6793578181776346442">"Физ. активн. и благосъстояние"</string>
+    <string name="permgrouplab_health" msgid="6793578181776346442">"Физ. активност и уелнес"</string>
 </resources>
